assets/css/main.css
/* ... */
.slider-arrow {
    position: absolute;
    top: 50%;
    transform: translateY(-50%);
    width: 78px;
    height: 83px;
    
    font-family: 'Fragment Mono', monospace;
    font-style: normal;
    font-weight: 400;
    font-size: 56px;
    line-height: 67px;
    
    color: #223E36;
    border: none;
    cursor: pointer;
    display: flex;
    align-items: center;
    justify-content: center;
    z-index: 10;
    background-color: #AFCBDE;
    transition: opacity 0.3s ease;
    padding: 0;
}

.slider-arrow.prev { left: 0px; }
.slider-arrow.next { right: 0px; }

.slider-text h2 {
    font-weight: 400;
    font-size: 60px;
    line-height: 82px;
    font-family: 'DM Serif Display', serif;
    max-width: 384px;
    margin-bottom: 18px;
    color: #223E36;
}

.product-detail { margin-bottom: 43px; gap: 7px; }
.product-detail h3 { font-family: 'Fragment Mono', monospace;
    font-style: normal;
    font-weight: 400;
    font-size: 24px;
    line-height: 29px; }
.product-detail p { color: #223E36; font-family: 'Fragment Mono', monospace;
    font-style: italic;
    font-weight: 400;
    font-size: 20px;
    line-height: 24px; }

.products-grid-container {
    display: flex;
    padding-left: 10%;
    padding-right: 0;
    gap: 71px;
    align-items: flex-start;
    overflow: hidden;
}

.grid-header {
    flex: 0 0 251px;
    display: flex;
    flex-direction: column;
    justify-content: flex-start;
    top: 0;
}

.grid-header h2 { font-size: 36px; line-height: 49px; margin-bottom: 12px; }
.grid-header p { font-family: 'Fragment Mono', monospace; font-size: 16px; line-height: 19px; margin-bottom: 56px; }
.grid-header a { font-family: 'Fragment Mono', monospace; font-size: 24px; line-height: 29px; margin-bottom: 56px; }

.grid-nav-arrows {
    display: flex;
    gap: 15px;
    margin-top: auto;
    margin: 25px 0;
}

.grid-arrow {
    background: #AFCBDE;
    color: #223E36;
    border: none;
    width: 50px;
    height: 50px;
    font-family: 'Fragment Mono', monospace;
    font-size: 24px;
    cursor: pointer;
    display: flex;
    align-items: center;
    justify-content: center;
    transition: background 0.3s ease;
}

.grid-arrow:hover {
    background: #9ab3c7;
}

@media (max-width: 768px) {
    .grid-nav-arrows { display: none; }
}

.products-scroll-wrapper {
    display: flex;
    gap: 24px;
    overflow-x: auto; /* Permite el scroll horizontal */
    overflow-y: hidden;
    width: 100%;
    
    /* Activa el frenado magnético (Snap) */
    scroll-snap-type: x mandatory; 
    
    scrollbar-width: none;
    -ms-overflow-style: none;
    
    -webkit-overflow-scrolling: touch; 
    padding-right: 10%;
}

.products-scroll-wrapper::-webkit-scrollbar {
    display: none;
}

.product-card {
    flex: 0 0 300px; 
    min-width: 280px;
    scroll-snap-align: start; 
    transition: transform 0.3s ease;
}

@media (max-width: 1024px) {
    .product-card {
        flex: 0 0 45%;
    }
}

@media (max-width: 768px) {
    .product-card {
        flex: 0 0 75%;
    }
}

.product-img {
    width: 100%;
    aspect-ratio: 15 / 14;
    overflow: hidden;
    display: flex;
    align-items: center;
    justify-content: center;
    background: #fff;
    margin-bottom: 7px;
}

.product-img img { width: 100%; object-fit: cover; height: 100%;
    display: block;}

.product-card h4 { font-family: 'Fragment Mono', monospace; font-size: 20px; line-height: 24px; font-weight: 400; margin-bottom: 7px;}
.product-card p { font-family: 'Fragment Mono', monospace; font-size: 14px; line-height: 17px; font-weight: 400; font-style: italic; max-width: 240px;}


@media (max-width: 1024px) {
    .slider-main {
        flex-direction: column;
        padding-left: 20px;
        padding-right: 20px;
        gap: 35px;
    }

    .slider-image-wrapper {
        flex: 0 0 100%;
        width: 100%;
    }

    .slider-text {
        width: 100%;
        text-align: left;
    }

    .slider-text h2 {
        max-width: 100%;
        font-size: 42px;
        line-height: 1.2;
    }

    /* Ajuste del Grid inferior */
    .products-grid-container {
        flex-direction: column;
        padding-left: 20px;
        gap: 40px;
    }

    .product-card {
        flex: 0 0 45%;
    }
}

@media (max-width: 768px) {
    .products-section {
        padding:  0;
        padding-bottom: 106px;
    }

    .slider-main {
        margin-bottom: 12px;
        gap: 21px;
        padding: 0;
    }

    .slider-arrow {
        width: 50px;
        height: 55px;
        font-size: 32px;
    }

    .slider-text {
        padding-inline: 21px;
    }

    .slider-text h2 {
        font-size: 40px;
        line-height: 55px;
        margin-bottom: 20px;
        text-align: center;
    }

    .product-detail {
        margin-bottom: 22px;
    }

    .product-detail h3 {
        font-size: 20px;
        line-height: 24px;
        margin-bottom: 4px;
    }

    .product-detail p {
        font-size: 16px;
        line-height: 19px;
    }

    .grid-header {
        display: none !important;
    }

    .products-grid-container {
        padding: 0;
        width: 100%;
    }

    .products-scroll-wrapper {
        display: grid;
        grid-template-columns: repeat(2, 1fr);
        gap: 20px 3px;
        
        overflow-x: visible;
        overflow-y: visible;
        width: 100%;
        padding-right: 0;
        scroll-snap-type: none;
    }

    .product-card {
        flex: none;
        width: 100%;
        min-width: 0;
    }

    .product-img {
        aspect-ratio: 15 / 14;
        width: 100%;
        margin-bottom: 5px;
    }

    .product-card h4 {
        padding-left: 12px;
        font-size: 13px;
        line-height: 16px;
        margin-bottom: 5px;
    }

    .product-card p {
        padding-left: 12px;
        font-size: 9px;
        line-height: 11px;
        max-width: 92%;
    }
}



.space-section {
    background-color: #F6F5F2;
    padding-bottom: 81px;
    overflow: hidden;
}
/* ... */

